<resources>
    <string name="aggiungi_preferiti">AGGIUNGI AI PREFERITI</string>
    <string name="segnala_elemento">SEGNALA ELEMENTO</string>
    <string name="recensioni_clienti_text">Recensioni dei Clienti</string>
    <string name="app_name">All Review</string>
    <string name="facebook_app_id">250156022057466</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="Notifiche">Notifiche</string>
    <string name="mie_recensioni">Le mie recensioni</string>
    <string name="persone_seguo">Persone che seguo</string>
    <string name="oggetti_seguo">Oggetti che seguo</string>
    <string name="inserisci_recensione">Nuova recensione</string>
    <string name="Assistenza">Assistenza</string>
    <string name="Exit">Esci</string>
    <string name="Button_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity__notifiche">Notifiche</string>
    <string name="title_activity_m_recensioni">Le mie Recensioni</string>
    <string name="title_activity_oggetti_s">Oggetti che seguo</string>
    <string name="title_activity_pers_s">Persone che seguo</string>
    <string name="title_activity_i_rec">Inserisci una recensione</string>
    <string name="title_activity__impostazioni">Impostazioni</string>
    <string name="title_activity__assistenza">Assistenza</string>
    <string name="title_activity__search">Activity_Search</string>
    <string name="title_activity_login">Sign in</string>
    <string name="elemento_ndisp">Nessun suggerimento</string>
    <string name="Risultati_ricerca">Risultati ricerca</string>
    <string name="title_activity_a21__inserisci_elemento">InserisciElemento</string>
    <string name="Categoria">Categoria</string>
    <string name="Nome_elemento">Nome Elemento</string>
    <string name="Name_nome_elemento">Name</string>
    <string name="Aggiungi_Foto">Aggiungi Foto</string>
    <string name="Descrizione">Descrizione</string>
    <string name="Crea">Crea</string>
    <string name="max_foto">Hai ragiunto il limite massimo di foto</string>
    <string name="errore_nome_elemento">Devi inserire un nome valido di almeno 3 caratteri</string>
    <string name="errore_descrizione">Devi inserire una descrizione di almeno tot caratteri</string>
    <string name="errore_categoria">Devi scegliere almeno una categoria</string>
    <string name="Text_View">TextView Standard</string>
    <string name="button_LOGIN">LOGIN</string>
    <string name="editText_username_login">Inserisci username o email</string>
    <string name="editText_password_login">Inserisci Password</string>
    <string name="button_login_ACCEDI">ACCEDI</string>
    <string name="button_ACCEDI_FACEBOOK">ACCEDI CON FACEBOOK</string>
    <string name="button_REGISTRATI">REGISTRATI</string>
    <string name="editText_username_registrazione">Inserisci username</string>
    <string name="editText_email_registrazione">Inserisci e-mail</string>
    <string name="editText_password1_registrazione">Inserisci Password</string>
    <string name="editText_password2_registrazione">Conferma Password</string>
    <string name="password_differenti">Le password inserite non coincidono o non sono valide</string>
    <string name="button_invia_registrazione">INVIA DATI</string>
    <string name="button_anonimo">ACCEDI DA ANONIMO</string>
    <string name="allert_invio_messaggio">Ti è stata inviata una e-mail all\'indirizzo di posta da te immesso.\nInserisci il codice che ti è arrivato qui sotto</string>
    <string name="inserire_codice">Inserire codice</string>
    <string name="bottone_INVIA_codice">INVIA</string>
    <string name="reinvia_email">Non hai ancora ricevuto la mail? Clicca qui</string>
    <string name="inserisci_dopo_codice">INSERISCI CODICE SUCCESSIVAMENTE</string>
    <string name="errore_email_registrazione">Hai inserito una e-mail non valida</string>
    <string name="username_esistente">Username già esistente</string>
    <string name="username_password_errati">Hai inserito username o password errati</string>
    <string name="password_dimenticata">Hai dimenicato la password? Clicca su questo link</string>
    <string name="email_gia_usata">L\'email è già stata usata, prova a loggarti</string>
    <string name="password_corta">La password inserita è troppo corta. Inserisci almeno 8 caratteri</string>
    <string name="errore_conferma_codice">Errore nell\'attivazione dell\'account, controlli il codice e se corretto ne richieda uno nuovo tramite email cliccando qui sotto o contatti l\'assistenza</string>
    <string name="Inserisci_la_tua_email">Inserisci la tua email</string>
    <string name="bottone_INVIA_email">INVIA</string>
    <string name="username_non_valido">Username non valido</string>
    <string name="errore_reinvio_email">C\'è stato un problema nel reinvio della email\nProva a contattare l\'assistenza</string>
    <string name="email_non_presente">L\'email inserita non è registrata</string>
    <string name="title_activity_di_prova">ActivityDiProva</string>
    <string name="communicate">Communicate</string>
    <string name="accedi">Accedi</string>
    <string name="registrati">Registrati</string>
    <string name="exit">Esci</string>
    <string name="a15_non_trovato_elemento">Non hai trovato quello che cercavi?</string>
    <string name="A15_button_crealo">CREALO</string>
    <string name="Profilo">Profilo</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="carica_nuova_immagine">Carica Nuova Immagine</string>
    <string name="punteggi_e_livelli">Punteggi e Livelli</string>
    <string name="max_values_utente">Al tuo attuale livello ogni giorno puoi fare {0} recensioni, votarne {1} e fare {2} domande.\n Oggi puoi ancora fare {3} recensioni, votare {4} volte e fare {5} domande</string>
    <string name="Domanda_Assistenza">Inserisci un titolo per la tua segnalazione</string>
    <string name="Hint_Domanda_Assistenza">...</string>
    <string name="Problema_Assistenza">Descrivi brevemente il tuo problema</string>
    <string name="Hint_Problema_Assistenza">...</string>
    <string name="title_activity__profile">Profilo</string>
    <string name="table_layout_4_open"/>
    <string name="title_activity__crearecensione">Crea Recensione</string>
    <string name="inserisci_titolo_crea_recensione">Inserisci qui il titolo della recensione</string>
    <string name="inserisci_descrizione_crea_recensione">Inserisci qui la descrizione completa della descrizione</string>
    <string name="bottone_pubblica_recensione">PUBBLICA</string>
    <string name="allega_immagine">Allega un\nimmagine</string>
    <string name="errore_titolo_recensione">Il titolo è troppo corto, inserisci almeno 4 caratteri</string>
    <string name="errore_descrizione_recensione">La descrizione è troppo corta, inserisci almeno 30 caratteri</string>
    <string name="modifica_profilo">Modifica Profilo</string>
    <string name="salva">Salva</string>
    <string name="modifica_mail">Modifica Email</string>
    <string name="modifica_username">Modifica Username</string>
    <string name="modifica_password">Modifica Password</string>
    <string name="your_new_username">Inserisci nuovo username</string>
    <string name="your_new_password">Inserisci nuova password</string>
    <string name="your_old_password">Inserisci vecchia password</string>
    <string name="your_new_email">Inserisci la nuova e-mail</string>
    <string name="warning_email_pass">Se cambi password o email dovrai loggarti nuovamente</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Vuoi_inserire_recensione">Scrivi una recensione</string>
    <string name="Vuoi_modificare_elemento">Modifica elemento</string>
    <string name="domande_e_risposte_clicca_qui">Domande &amp; Risposte</string>
    <string name="title_activity__pagina_elemento">Pagina Elemento</string>
    <string name="Descrizione_a27">Descrizione:</string>
    <string name="Categoria_a27">Categoria:</string>
    <string name="nome_profilo">Nome Profilo</string>
    <string name="scritta_da">di</string>
    <string name="inserisci_domanda">Inserisci la tua domanda</string>
    <string name="cerca_domande">Cerca nelle Domande</string>
    <string name="valutazione_data">Valutazione data :</string>
    <string name="modifica_elemento">Modifica Elemento</string>
    <string name="modifica_categoria">Modifica Categoria</string>
    <string name="InviaModifiche">Invia Modifiche</string>
    <string name="modifica_nome">Modifica Nome</string>
    <string name="modifica_descr">Modifica Descrizione</string>
    <string name="nuova_descr">Nuova Descrizione</string>
    <string name="nome">Nome</string>
    <string name="Recensione_per_elemento">Recensione per l\'Elemento:</string>
    <string name="Inserito_da">Inserito da:</string>
    <string name="in_data">in data</string>
    <string name="search">Cerca ...</string>
    <string name="warning_domanda">Si educato, non esigere, qua nulla ti è dovuto!</string>
    <string name="rimuovi_preferiti">Rimuovi dai preferiti</string>
    <string name="titolo_segnalazione_elemento">Inserisci le motivazioni della tua segnalazione</string>
    <string name="non_ci_sono_recensioni">Non ci sono recensioni per questo elemento</string>
    <string name="carica_immagine_profilo">Carica immagine profilo</string>
    <string name="segui_utente">Segui utente</string>
    <string name="non_seguire_più">Non seguire piu\'</string>
    <string name="info_livelli_e_punteggi">info livelli e punteggi</string>
    <string name="classifica_utenti">classifica utenti</string>
    <string name="risposta">Nuova Risposta</string>
    <string name="Inserito_in">in:</string>
    <string name="recensioni_non_presenti">non ci sono recensioni</string>
    <string name="nuova_risposta">Rispondi alla domanda</string>
    <string name="rispondi">Rispondi</string>
    <string name="nuova_domanda">Inserisci una domanda</string>
    <string name="domanda">Chiedi</string>
    <string name="il">il</string>
    <string name="inserisci">Inserisci</string>
    <string name="dell_elemento">dell\'elemento:</string>
    <string name="associa_email">Devi associare almeno un account email al tuo smartphone</string>
    <string name="titolo_breve">Titolo troppo breve</string>
    <string name="descrizione_breve">Descrizione del problema troppo breve</string>
    <string name="controlla_cconnesione">\"Errore nel caricamento , controlla la connessione\"</string>
    <string name="riceverai_risposta">Riceverai presto una risposta dal nostro team</string>
    <string name="inserisci_email_assistenza">Inserisci la email con la quale ti contatteremo</string>
    <string name="contattando_staff">Invio in corso</string>
    <string name="email_errata">Inserisci una e-mail valida</string>
    <string name="Homepage_Loading">Caricamento Homepage</string>
    <string name="Login_Loading">Accesso in corso...</string>
    <string name="invio_mail">Ti è stata inviata la nuova password nella tua email</string>
    <string name="Registratin_Loading">Registrazione in corso</string>
    <string name="Error_Facebook">Errore nella connessione a facebook</string>
    <string name="Log_Facebook">"Accesso con Facebook"</string>
    <string name="First_Sign">Prima registrazione</string>
    <string name="Facebook_Email_Used">La tua email di facebook è già usata</string>
    <string name="Facebook_Fail">Connessione a Facebook fallita</string>
    <string name="Success_email">Ti è stata inviata correttamente una nuova email con il codice</string>
    <string name="Livello">Livello</string>
    <string name="Punteggio">Punteggio</string>
    <string name="Recensioni_giorno"># Recensioni/giorno</string>
    <string name="Voti_giorno"># Voti/giorno</string>
    <string name="Domande_giorno"># Domande/giorno</string>
</resources>