<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/sfondo"
              android:orientation="vertical">

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/bottone_verde"
        android:drawableLeft="@mipmap/ic_filter_tilt_shift_black_24dp"
        android:paddingLeft="40dp"
        android:paddingRight="20dp"
        android:text="@string/button_LOGIN" />


    <android.support.v7.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/username_login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/editText_username_login"
                android:visibility="gone" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/editText_password_login"
                android:inputType="textPassword"
                android:visibility="gone" />

            <TextView
                android:id="@+id/username_password_errati"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/username_password_errati"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <TextView
                android:id="@+id/password_dimenticata"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/password_dimenticata"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/email_non_presente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/email_non_presente"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <Button
                android:id="@+id/accedi"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/bottone_verde"
                android:text="@string/button_login_ACCEDI"
                android:visibility="gone" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/facebook"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/bottone_facebook"
        android:drawableLeft="@mipmap/facebook_icon"
        android:paddingLeft="15dp"
        android:text="@string/button_ACCEDI_FACEBOOK"
        android:textColor="@color/white">Z</Button>


    <Button
        android:id="@+id/registrazione"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/bottone_registrati"
        android:drawableLeft="@mipmap/ic_create_black_24dp"
        android:paddingLeft="40dp"
        android:paddingRight="20dp"
        android:text="@string/button_REGISTRATI" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_registrazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/username_registrazione"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/editText_username_registrazione"
                android:inputType="textNoSuggestions"
                android:visibility="gone" />

            <TextView
                android:id="@+id/username_gia_esistente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/username_esistente"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <TextView
                android:id="@+id/username_non_valido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/username_non_valido"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <EditText
                android:id="@+id/email_registrazione"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/editText_email_registrazione"
                android:inputType="textEmailAddress"
                android:visibility="gone" />

            <TextView
                android:id="@+id/errore_email_registrazione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/errore_email_registrazione"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <TextView
                android:id="@+id/email_gia_usata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/email_gia_usata"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <EditText
                android:id="@+id/password_registrazione1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/editText_password1_registrazione"
                android:inputType="textPassword"
                android:visibility="gone" />

            <EditText
                android:id="@+id/password_registrazione2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/editText_password2_registrazione"
                android:inputType="textPassword"
                android:visibility="gone" />

            <TextView
                android:id="@+id/password_differenti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/password_differenti"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <TextView
                android:id="@+id/password_corta"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/password_corta"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <Button
                android:id="@+id/registrati"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/bottone_registrati"
                android:text="@string/button_invia_registrazione"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/anonimo"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bottone_grigio_anonimo"
        android:drawableLeft="@drawable/ic_person"
        android:paddingLeft="30dp"
        android:text="@string/button_anonimo" />

</LinearLayout>