<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sfondo"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/modifica_profilo"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20dp"
        android:textStyle="bold"
        android:typeface="serif"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <CheckBox
            android:id="@+id/modifica_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/modifica_username"
            android:textSize="16dp"
            android:typeface="serif"/>
    </LinearLayout>

    <EditText
        android:id="@+id/new_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:alpha="0"
        android:hint="@string/your_new_username"
        android:typeface="serif"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <CheckBox
            android:id="@+id/modifica_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/modifica_mail"
            android:textSize="16dp"
            android:typeface="serif"/>
    </LinearLayout>

    <EditText
        android:id="@+id/new_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:alpha="0"
        android:hint="@string/your_new_email"
        android:inputType="textEmailAddress"
        android:typeface="serif"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <CheckBox
            android:id="@+id/modifica_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/modifica_password"
            android:textSize="16dp"
            android:typeface="serif"/>
    </LinearLayout>

    <EditText
        android:id="@+id/password_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:alpha="0"
        android:hint="@string/your_old_password"
        android:inputType="textPassword"
        android:typeface="serif"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:alpha="0"
        android:hint="@string/your_new_password"
        android:inputType="textPassword"
        android:typeface="serif"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/send_changes"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottone_verde"
        android:gravity="center"
        android:text="@string/bottone_INVIA_codice"
        android:textColor="@color/white"
        android:textSize="14sp"/>

</LinearLayout>